style.css
/* ... */
.why-choose-us .card h3 {
  color: var(--text-light);
  font-size: var(--text-md);
  font-weight: var(--fw-bold);
  letter-spacing: var(--letter-spacing-wide);
  line-height: var(--line-height-tight);
  text-align: center;
  margin-bottom: var(--space-5);
}
.why-choose-us .card p {
  color: var(--text-semi-light);
  font-size: var(--text-sm);
  font-weight: var(--fw-normal);
  letter-spacing: var(--letter-spacing-normal);
  line-height: var(--line-height-loose);
  text-align: center;
  width: 90%;

  transition: var(--duration-fast) var(--ease-default);
}

@media (max-width: 900px) {
  .why-choose-us .cards {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-self: center;
    justify-self: center;
    justify-content: center;
    gap: var(--space-4);
    width: min(800px, 80dvw);
  }
  .why-choose-us .card {
    width: 100%;
    height: auto;
    padding: var(--space-5);
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    gap: var(--space-5);
  }
  .why-choose-us .card img {
    height: 50%;
    margin-left: var(--space-1);
    margin-block: 0px;
  }
  .why-choose-us .card div {
    align-items: flex-start;
    justify-content: flex-start;
  }
  .why-choose-us .card div h3 {
    margin-bottom: var(--space-2);
  }
  .why-choose-us .card div p {
    text-align: start;
    width: 100%;
    line-height: var(--line-height-normal);
    letter-spacing: var(--letter-spacing-wide);
  }
}
@media (max-width: 600px) {
  .why-choose-us h2 {
    font-size: var(--text-lg);
  }
  .why-choose-us .card h3 {
    font-size: var(--text-base);
  }
}

/* end why choose us  */

/* start CTA  */
.cta {
  background-color: hsl(218, 67%, 2%);
}
.cta .container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  padding-block: calc(var(--space-9) + 2.5rem);
  border-top: 1px solid hsla(from white h s l / 0.15);
}
.cta h2,
.cta h2 span {
  font-family: var(--ff-heading-1);
  font-size: var(--text-xl);
  font-weight: var(--fw-bold);
  line-height: var(--line-height-normal);
  letter-spacing: var(--letter-spacing-wide);
  color: var(--text-light);
}
.cta h2 span {
  opacity: 0.9;
}

.cta button {
  background-color: var(--primary-dark);
  border-bottom: 1px solid hsla(from var(--accent-light) h s l / 0.5);
  border-right: 1px solid hsla(from var(--accent-light) h s l / 0.5);
  border-top: 1px solid var(--text-semi-light);
  border-left: 1px solid var(--text-semi-light);
  box-shadow: inset 2px 7px 16px -12px var(--text-semi-light);

  font-size: var(--text-md);
  padding: var(--space-3) var(--space-6);

  transition: var(--duration-base) var(--ease-default);
}
.cta button:hover {
  font-size: var(--text-md);

  letter-spacing: var(--letter-spacing-normal);
  padding: var(--space-3) var(--space-6);
  box-shadow:
    color(srgb 0.77 0.71 0.71 / 0.37) 6px 3px 28px 1px,
    inset color(srgb 1 1 1 / 0.89) 1px 1px 16px -1px;
}

@media (max-width: 800px) {
  .cta .container {
    flex-direction: column;
    padding: var(--space-8);
  }
  .cta h2 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: var(--space-6);
    font-size: var(--text-md);
    > span {
      font-size: var(--text-md);
    }
  }
  .cta button {
    padding: var(--space-2) var(--space-4);
  }
}
/* end CTA  */

/* Start footer  */
.footer {
  background-color: hsl(218, 67%, 2%);
  border-top: 1px solid hsla(from #3e3e3e h s l / 0.2);
  padding-top: var(--space-7);
  padding: var(--space-4);
}
.footer .footer-flex {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  gap: var(--space-4);
}
.footer-left {
  width: 300px;
}
.footer .logo {
  font-family: var(--ff-heading-2);
  font-size: var(--text-xl);
  font-weight: var(--fw-medium);
  font-style: italic;
  letter-spacing: var(--letter-spacing-tight);
  line-height: var(--line-height-tight);

  justify-self: flex-start;
  color: var(--primary-regular);
  margin-bottom: var(--space-5);
}
.footer .links {
  display: flex;
  align-items: center;
  gap: var(--space-3);
}
.footer li a {
  display: flex;
  gap: var(--space-1);
}
.footer li a p {
  display: none;
  transition: var(--duration-base) var(--ease-bounce);
}
.footer li a img {
  width: var(--space-5);
}
.footer li:hover a p {
  display: inline-block;
}

.footer .container .footer-flex > p {
  text-align: center;
  align-self: center;
  letter-spacing: var(--letter-spacing-wide);
  word-spacing: 0.3rem;

  color: var(--text-regular);
}
.footer .nav h6 {
  color: hsla(from white h s l / 0.7);
  margin-bottom: var(--space-2);
}
.footer .nav li:hover a {
  text-decoration: underline;
  color: hsla(from white h s l / 0.4);
}
.footer .nav .footer-nav {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  height: 5rem;
  column-gap: 1rem;
}

@media (max-width: 900px) {
  .footer .container .footer-flex {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: var(--space-6);
  }
  .footer-left {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .footer .nav {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  .footer .nav .footer-nav {
    height: auto;
    align-items: center;
  }
}
/* end footer  */

/* form styles  */
section.form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: var(--space-7);

  padding: var(--space-7);
  border-radius: var(--radius-xl);

  background-color: var(--primary-dark);
  width: min(800px, 80dvw);
  margin-bottom: 5rem;
}
section.form h1 {
  font-family: var(--ff-heading-1);
  font-size: var(--text-lg);
  font-weight: var(--fw-medium);
  letter-spacing: var(--letter-spacing-tight);
  line-height: var(--line-height-tight);

  color: var(--text-light);
}
/* ... */

